name:                canteven-parsedate
version:             2.0.0.0
synopsis:            Date / time parsing utilities that try to guess the date / time format.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Rick Owens, Alex Babkin
maintainer:          rowens@sumall.com, ababkin@sumall.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Canteven.ParseDate,
    Canteven.ParseDate.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    tz                   >= 0.1.2.1  && < 1.2,
    base                 >= 4.7      && < 4.10,
    time                 >= 1.6.0.1  && < 1.7,
    timezone-series      >= 0.1.5.1  && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

Test-Suite test-parsedate
  type: detailed-0.9
  hs-source-dirs: test
  test-module: Canteven.TestParseDate
  -- FIXME. WTF is going on with the time library
  build-depends:
    Cabal                >= 1.22.8.0 && < 1.25,
    base                 >= 4.7      && < 4.10,
    canteven-parsedate,
    old-locale           >= 1.0.0.7  && < 1.1,
    time                 >= 1.6.0.1  && < 1.7
  default-language:    Haskell2010
  ghc-options: -Wall


