name:                canteven-parsedate
version:             2.0.0.2
synopsis:            Date / time parsing utilities that try to guess the date / time format.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Rick Owens, Alex Babkin
maintainer:          rowens@sumall.com, ababkin@sumall.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Canteven.ParseDate,
    Canteven.ParseDate.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    tz                   >= 0.1.2.1  && < 1.2,
    base                 >= 4.7      && < 4.12,
    time                 >= 1.6.0.1  && < 1.9,
    timezone-series      >= 0.1.5.1  && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

Test-Suite test-parsedate
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends:
    Cabal                >= 1.22.8.0 && < 2.3,
    base,
    canteven-parsedate,
    old-locale           >= 1.0.0.7  && < 1.1,
    safe-exceptions      >= 0.1.7.0  && < 0.2,
    time
  default-language:    Haskell2010
  ghc-options: -Wall


