name:                parsedate
version:             0.5.1.0
synopsis:            Date / time parsing utilities that try to guess the date / time format.
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Rick Owens, Alex Babkin
maintainer:          rowens@sumall.com, ababkin@sumall.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     System.Time.ParseDateTime,
    System.Time.ParseDateTime.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base,
    old-locale,
    time >=1.4.1 && < 1.5,
    timezone-series
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-parsedate
  type: detailed-0.9
  hs-source-dirs: test
  test-module: System.Time.TestParseDateTime
  -- FIXME. WTF is going on with the time library
  build-depends:
    Cabal>=1.20,
    base,
    old-locale,
    parsedate,
    time >=1.4.1 && < 1.5,
    timezone-series
  default-language:    Haskell2010
